--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="sidenav-menus menus">
         <button>Business</button>
         <button>Entertainment</button>
         <button>General</button>
@@ -23,15 +24,16 @@
         <button>Science</button>
         <button>Sports</button>
         <button>Technology</button>
+        </div>
     </div>
       
     <section class = "container">
         <div class = "top-buttons">
-            <i class="fa-solid fa-bars hamburger-button" onclick="openNav()"></i>
-            <i class="fa-solid fa-magnifying-glass search-button" onclick="toggleSearch()"></i>
+            <i class="fa-solid fa-bars hamburger-icon" onclick="openNav()"></i>
+            <i class="fa-solid fa-magnifying-glass search-icon" onclick="toggleSearch()"></i>
             <span id="search-group">
                 <input class="form-control me-2" id="search-input" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit" onclick="getNewsByKeyword()">검색</button>
+                <button class="btn btn-outline-success" id="search-button" type="submit" onclick="getNewsByKeyword()">검색</button>
             </span>
         </div>
         <section>
@@ -42,7 +44,7 @@
                     </path>
                 </svg>
             </div>
-            <div class = "menus">
+            <div class = "main-menus menus">
                 <button>Business</button>
                 <button>Entertainment</button>
                 <button>General</button>
@@ -56,7 +58,11 @@
         <section id="news-board">
 
         </section>
+        <nav aria-label="Page navigation example" class="pagination-area">
+            <ul class="pagination">
 
+            </ul>
+        </nav>
     </section>
 
 
